src/test/ui/const-generics/const_evaluatable_checked/simple.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/simple.rs:7:53
   |
LL | fn test<const N: usize>() -> [u8; N - 1] where [u8; N - 1]: Default {
   |                                                     ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/simple.rs:7:35
   |
LL | fn test<const N: usize>() -> [u8; N - 1] where [u8; N - 1]: Default {
   |                                   ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to 2 previous errors

